@@ -18,9 +18,9 @@ import net.minecraft.world.IBlockReader;
 public final class EnergyBridge extends RotatedPillarBlock {
 
   private static final VoxelShape[] shapes = {
-    VoxelShapes.create(7.0 / 16, 0, 0, 9.0 / 16, 1.0, 1.0),
+    VoxelShapes.create(7.0 / 16, 0, 0, 9.0 / 16, 1.0, 1.0), // X = flat going forward and back, missing left and right
     VoxelShapes.create(0, 14.0 / 16, 0, 1.0, 1.0, 1.0),
-    VoxelShapes.create(0, 0, 7.0 / 16, 1.0, 1.0, 9.0 / 16)
+    VoxelShapes.create(0, 0, 7.0 / 16, 1.0, 1.0, 9.0 / 16)  // Z = flat going left and right, missing front and back
   };
 
   public EnergyBridge(final String name, final Lens lens){
@@ -34,16 +34,25 @@ public final class EnergyBridge extends RotatedPillarBlock {
     return getDefaultState().with(AXIS, axis);
   }
 
-  @SuppressWarnings("deprecation")
   @Override
-  public VoxelShape getShape(BlockState state, IBlockReader worldIn, BlockPos pos, ISelectionContext context){
+  @SuppressWarnings("deprecation")
+  public final VoxelShape getShape(BlockState state, IBlockReader worldIn, BlockPos pos, ISelectionContext context){
     return shapes[state.get(AXIS).ordinal()];
   }
 
-  @SuppressWarnings("deprecation")
   @Override
-  public VoxelShape getCollisionShape(BlockState state, IBlockReader worldIn, BlockPos pos, ISelectionContext context){
+  @SuppressWarnings("deprecation")
+  public final VoxelShape getCollisionShape(BlockState state, IBlockReader worldIn, BlockPos pos, ISelectionContext context){
     return shapes[state.get(AXIS).ordinal()];
+  }
+
+  @Override
+  @SuppressWarnings("deprecation")
+  public final boolean isSideInvisible(BlockState state, BlockState adjacentBlockState, Direction side){
+    // Minecraft 1.15 already renders the Energy Suspension Bridge correctly.
+    // TODO: Still have problem with vertical bridges however.
+    // If I ever need to implement this function, copy the code from the 1.14 version.
+    return super.isSideInvisible(state, adjacentBlockState, side);
   }
 
 }
