@@ -4,6 +4,13 @@ v1.3.2 - TBD
   Advanced Ore Refinery:
    - Now requires 20 seconds to do an operation, twice as long as a Furnace.
    - Now requires 8,000 energy per operation instead of 5,000.
+  Fixed block transparency issues:
+   - Portal to the Unknown Dimension energy blocks.
+   - Energy Storage Container.
+   - Energy Suspension Bridge blocks (but only for horizontal bridges)
+   - Laser energy blocks.
+  Fix Fusion Energy Structure Laser Beam was solid and not transparent.
+   - Only for 1.15 version.
 
 
 
